Add TrustSet Flags and change AccountSet flag abstraction

--- a/blueprint.yaml
+++ b/blueprint.yaml
@@ -7,8 +7,8 @@ redis:
 issuance:
   genesis:
     account:
-      address: "rK9TM6ewzMtifMDib57AZ6TBcpp81JYwZF"
-      secret: "shJGvnajR3xo8u8KRnjzgipiiToDw"
+      address: "rf7QP7mGsG4Zcy5LpCpezqMjUKZCkikSD"
+      secret: "ssFHGygzKLCBP8qyPDQ35RW9fvX6F"
   currencyCode: "534F4C4F00000000000000000000000000000000"
   totalSupply: 400_000_000
   beforeOperation:
@@ -18,25 +18,32 @@ issuance:
           TransferRate: 1000100000
           EmailHash: "7AC3878BF42A5329698F468A6AAA03B9"
           Domain: "736F6C6F67656E69632E636F6D"
-    flags:
-      - 3 #asfDisallowXRP
-      - 6 #asfNoFreeze
-      - 8 #asfDefaultRipple
+      - type: AccountSet
+        options:
+          SetFlag: 3 #asfDisallowXRP
+      - type: AccountSet
+        options:
+          SetFlag: 6 #asfNoFreeze
+      - type: AccountSet
+        options:
+          SetFlag: 8 #asfDefaultRipple
   distributions:
     - name: "A"
       account:
-        address: "rLocsgGQQWyRyiLwgir46Q8xYpMK5erLVf"
-        secret: "ss24nRwYweEtxk5USbJastrb6Sgji"
-      transactions:
+        address: "rEN7vx5uQLQkt4ZNqzQ4ZrLRkAbjFoV5my"
+        secret: "snw3eFVhDcYmjNMRESsY4SvrbrriZ"
+      TrustSetFlags: 0x00020000 #tfSetNoRipple
+      send:
         - type: Payment
           amount: 50_000_000
         - type: Payment
           amount: 50_000_000
     - name: "B"
       account:
-        address: "rhWkvNKWt67WLJRDreHTTpUy1ddFM7q7f5"
-        secret: "sszpY5jTQUaUA8sk7aPJyGHyFaHKG"
-      transactions:
+        address: "rBJuHN9wJMBT2D6fEidFPH6Ax9o6vcAxj8"
+        secret: "saNy5PZpbYsV4GjfLBz9Nr6rybzDx"
+      TrustSetFlags: 0x00020000 #tfSetNoRipple
+      send:
         - type: Payment
           amount: 100_000_000
   afterOperation:
@@ -44,5 +51,6 @@ issuance:
       - type: SetRegularKey
         options:
           RegularKey: "rrrrrrrrrrrrrrrrrrrrBZbvji"
-    flags:
-      - 4 #asfDisableMaster
+      - type: AccountSet
+        options:
+          SetFlag: 4 #asfDisableMaster
